RESOLVED FIXED79273
HTML Comments after </body> are placed at the bottom of the <body> contents
https://bugs.webkit.org/show_bug.cgi?id=79273
Summary HTML Comments after </body> are placed at the bottom of the <body> contents
Zach Bailey
Reported 2012-02-22 13:34:35 PST
See also: http://code.google.com/p/chromium/issues/detail?id=115338 What steps will reproduce the problem? 1. load the attached file 2. execute document.body.innerHTML in the console What is the expected result? document.body.innerHTML should not include the comment What happens instead? document.body.innerHTML includes the comment
Attachments
open to reproduce (287 bytes, text/html)
2012-02-22 13:36 PST, Zach Bailey
no flags
test-case (672 bytes, text/html)
2013-03-22 07:18 PDT, Oleg Smirnov
no flags
Patch (1.33 KB, patch)
2013-03-22 07:56 PDT, Oleg Smirnov
rniwa: review-
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-13 (530.03 KB, application/zip)
2013-03-22 08:28 PDT, Build Bot
no flags
Zach Bailey
Comment 1 2012-02-22 13:36:14 PST
Created attachment 128277 [details] open to reproduce
Oleg Smirnov
Comment 2 2013-03-22 07:18:55 PDT
Created attachment 194537 [details] test-case
Oleg Smirnov
Comment 3 2013-03-22 07:56:13 PDT
Oleg Smirnov
Comment 4 2013-03-22 08:09:40 PDT
Please review the patch. Now WebKit behaviour is like in Opera and FF.
Build Bot
Comment 5 2013-03-22 08:28:47 PDT
Comment on attachment 194545 [details] Patch Attachment 194545 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-commit-queue.appspot.com/results/17181811 New failing tests: fast/dom/XMLSerializer.html css3/flexbox/flexitem.html inspector/elements/set-outer-html-body.html fast/dom/Range/range-extract-contents.html
Build Bot
Comment 6 2013-03-22 08:28:49 PDT
Created attachment 194555 [details] Archive of layout-test-results from webkit-ews-13 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-13 Port: <class 'webkitpy.common.config.ports.MacWK2Port'> Platform: Mac OS X 10.8.2
Ryosuke Niwa
Comment 7 2013-03-22 08:42:10 PDT
Comment on attachment 194545 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=194545&action=review > Source/WebCore/editing/MarkupAccumulator.cpp:137 > + if (Node::COMMENT_NODE == targetNode->nodeType()) > + return; Why does this fix the bug?
Ryosuke Niwa
Comment 8 2013-03-22 08:44:15 PDT
Comment on attachment 194545 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=194545&action=review > Source/WebCore/ChangeLog:8 > + Skip inserting of content comments to innerHTML return value. We need a layout test for this. See http://www.webkit.org/quality/testwriting.html r- due to the lack of tests.
Oleg Smirnov
Comment 9 2013-03-22 10:08:14 PDT
sure, i will recheck failed tests...and will prepare own test for issue.
Ahmad Saleem
Comment 10 2022-06-02 05:01:31 PDT
I am still able to reproduce this bug using both attached test cases in Safari 15.5 on macOS 12.4, this behavior is similar to Chrome Canary 104 as well. Although, Firefox Nightly 103 does not show comment in "console" logs for both test cases. Thanks!
Radar WebKit Bug Importer
Comment 11 2022-06-20 16:46:12 PDT
Anne van Kesteren
Comment 12 2023-03-27 11:19:28 PDT
EWS
Comment 13 2023-03-28 09:27:45 PDT
Committed 262222@main (4dc62c7c9b46): <https://commits.webkit.org/262222@main> Reviewed commits have been landed. Closing PR #12019 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.