HTML Comments after </body> are placed at the bottom of the <body> contents https://bugs.webkit.org/show_bug.cgi?id=79273 rdar://95557786

Reviewed by Ryosuke Niwa.

Consume whitespace in the "after body" and "after after body" modes so following comments get inserted after the body element.

Tests are from https://chromium.googlesource.com/chromium/src/+/9a75bc03766976f883731f08d52ae70204f94caa%5E%21/ and contrary to the assertion there do not pass in WebKit today.

* LayoutTests/editing/selection/doubleclick-crash-expected.txt:
* LayoutTests/html5lib/resources/webkit01.dat:
* LayoutTests/platform/gtk/editing/selection/doubleclick-crash-expected.txt:
* Source/WebCore/html/parser/HTMLTreeBuilder.cpp:
(WebCore::HTMLTreeBuilder::consumeAndInsertWhitespace):

Abstracts a common operation.

(WebCore::HTMLTreeBuilder::processCharacterBuffer):
(WebCore::HTMLTreeBuilder::processTokenInForeignContent):
* Source/WebCore/html/parser/HTMLTreeBuilder.h:

Canonical link: https://commits.webkit.org/262222@main